--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,3 +2,4 @@
 
 <%= link_to 'Products', controller: 'products' %>
 <%= link_to 'Orders', controller: 'orders' %>
+<%= link_to 'Users', controller: 'users' %>
