--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,1 @@
-<h1>Dashboard</h1>
-
-<%= link_to 'Products', controller: 'products' %>
-<%= link_to 'Orders', controller: 'orders' %>
+<% content_for :title, "LarkLims - Dashboard" %>
