--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,4 +8,5 @@
     <%= @product.description %>
 </p>
 
+<%= link_to "Add params", product_product_params_path(@product) %>
 <%= link_to "Back", products_path %>
