Introduce page style - dashboard page template and style - browser page template and style - login page and style

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -2,18 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-$hover_color: #4183c4;
-$default_font_color: #333333;
-$header_bg_color: whitesmoke;
-$header_border_color: #e5e5e5;
-
-$colorHighlight: #1BA0E1;
-$colorDoubleHighlight: #1378A8;
-$colorTextOnHighlight: #FFFFFF;
-$colorTextOnHighlightHover: #FFFFFF;
-//$colorDoubleHighlight: #00FF00;
-$test: #f5f5f5;
-
+@import "config";
 
 html {
   box-sizing: border-box;
@@ -27,21 +16,6 @@ body {
   background-color: #fff;
 }
 
-
-// Header layout
-
-
-.header {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  min-width: 1000px;
-  background-color: whitesmoke;
-  border-bottom: 1px solid $header_border_color;
-  display: block;
-
-  font-weight: bold;
-}
-
 .clearfix::before {
   display: table;
   content: "";
@@ -52,133 +26,12 @@ body {
   content: "";
 }
 
-.header_element {
-  float: left;
-}
-
-.theme_background {
-  background: $default_font_color;
-  color: $colorTextOnHighlight !important;
-}
-.theme_background:hover {
-  background: $hover_color;
-  color: $colorTextOnHighlightHover !important;
-}
-
-.pictogram_image {
-  height: 28px;
-  width: 28px;
-  margin: 0px;
-  float: left;
-  vertical-align: top;
-  align: left;
-}
-.lark_pictogram_image {
-  background: url("lark_silhouette_28x28.png") 28px 28px no-repeat;
-  background-position: left top;
-}
-.pictogram_sh {
-    display: block;
-    width: 28px;
-
-    overflow: hidden;
-}
-
-
-div.site-search {
-  position: relative;
-  float: left;
-}
-
-div.site-search form {
-  position: relative;
-  float: left;
-  width: 360px;
-  margin-right: 10px;
-}
-
-div.site-search input {
-  position: relative;
-  width: 100%;
-  padding: 4px 20px 4px 8px;
-  font-size: 12px;
-  margin-left: 6px;
-  margin-right: 6px;
-
-  vertical-align: middle;
-  background-color: #fff;
-  background-repeat: no-repeat;
-  background-position: right center;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-  outline: none;
-  box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
-  font: 13px/1.4 Helvetica, arial, freesans, clean, sans-serif;
-}
-
-
-
-div.container {
-  width: 980px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-div.container ul {
-    margin-top: 0;
-    margin-bottom: 0;
-
-    list-style: none;
-}
-
-ul.nav-left {
-  display: block;
-  padding: 0px 2px 0 28px;
-  float: left;
-}
-
-ul.nav-right {
-  float: right;
-}
-
-
-
-li.header-nav-item {
-  float: left;
-  list-style: none;
-  padding: 4px 8px 4px 8px;
-
-}
-
-li.header-nav-item span:hover {
-  color: $hover_color;
-}
-
-li.header-nav-item i:hover {
-  color: $hover_color;
-}
-
-li.header-nav-item a {
-  display: inline;
-  text-decoration: none;
-}
-li.header-nav-item a:visited {
-  color: $default_font_color;
-}
-li.header-nav-item a:hover {
-  color: $hover_color;
-  background-color: $header_bg_color;
-}
-
-
 .right {
   float: right;
 }
 .left {
   float: left;
 }
-
-
 
 .contenthead {
   position: relative;
@@ -200,203 +53,7 @@ li.header-nav-item a:hover {
   padding-bottom: 20px;
 }
 
-// DASHBOARD
-
-.user-fullname {
-  display: block;
-  overflow: hidden;
-  width: 100%;
-  font-size: 26px;
-  line-height: 30px;
-  text-overflow: ellipsis;
-}
-.username {
-  display: block;
-  overflow: hidden;
-  width: 100%;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 300;
-  line-height: 24px;
-  color: #666;
-  text-overflow: ellipsis;
-}
-.content {
-  width: 980px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.columns {
-  margin-left: -10px;
-  margin-right: -10px;
-}
-
-.column {
-  float: left;
-  padding-left: 10px;
-  padding-right: 10px;
-  box-sizing: border-box;
-}
-.one-fourth {
-  width: 25%;
-}
-.three-fourths {
-  width: 75%;
-}
-.dashboard-content {
-  min-height: 345px;
-}
-
-.activity-list-header {
-  margin: 0 0 15px;
-  color: #666;
-  border-bottom: 1px solid #ddd;
-}
-.activity-list-header-item {
-display: inline-block;
-padding: 8px 12px 7px;
-font-size: 14px;
-line-height: 20px;
-}
-
-.activities {
-  float: none;
-  width: auto;
-}
-
-.activities .activity:first-child {
-  border-top: 0;
-}
-.activities .activity {
-  position: relative;
-  padding: 0 0 1em 45px;
-  overflow: hidden;
-  border-top: 1px solid #f1f1f1;
-}
-
-.body {
-  font: 13px/1.4 Helvetica, arial, freesans, clean, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
-  color: #333333;
-}
-
-.activity-icon {
-  position: absolute;
-  top: 14px;
-  left: 0;
-  width: 32px;
-  height: 32px;
-  padding: 3px;
-  color: #bbb;
-}
-
-.activity-time {
-  font-size: 12px;
-  color: #bbb;
-}
-
-.activity-title {
-  font-weight: bold;
-  font-size: 14px;
-}
-.activity-title a {
-  color: #4183c4;
-
-  cursor: pointer;
-}
-.activity-title a:hover {
-  color: #4183c4;
-  text-decoration: underline;
-  background-color: #fff;
-}
-
-.activity-details {
-  color: #666;
-}
-
-
-
-
-// BROWSER
-
-.button {
-  position: relative;
-  display: inline-block;
-  padding: 7px 12px;
-  font-size: 13px;
-  font-weight: bold;
-  white-space: nowrap;
-  vertical-align: middle;
-  cursor: pointer;
-  border: 1px solid #d5d5d5;
-  border-radius: 3px;
-}
-.button.primary {
-  color: #fff;
-  text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
-  background-color: #60b044;
-  background-image: linear-gradient(#8add6d, #60b044);
-  background-repeat: repeat-x;
-  border-color: #5ca941;
-}
-.browser-subnav-item+.browser-subnav-item {
-  margin-left: -1px;
-}
-.browser-subnav-item:first-child {
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-}
-.browser-subnav-item:last-child {
-  border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
-}
-.browser-subnav-item {
-  position: relative;
-  float: left;
-  padding: 7px 14px;
-  font-weight: bold;
-  color: #666;
-  border: 1px solid #e5e5e5;
-  cursor: pointer;
-}
-
-.browser-subnav-item.selected {
-  z-index: 2;
-  color: #fff;
-  background-color: #4183c4;
-  border-color: #4183c4;
-}
-.browser-subnav-item.selected:hover {
-
-  color: #fff;
-  background-color: #4183c4;
-}
-.browser-subnav-item:hover {
-  color: #666;
-  background-color: #f5f5f5;
-}
-/*
-
-.dashboard-subnav {
-  margin-bottom: 20px;
-}
-
-.dashboard-subnav a {
-  margin-left: 10px;
-  text-decoration: none;
-  background: transparent;
-}
-*/
-
-.order-list-header {
-
-}
-
-.order-list {
-
-}
-
-.order-list-item {
-
-}
-
+@import "loginpage";
+@import "siteheader";
+@import "dashboard";
+@import "browser";
