--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -46,4 +46,4 @@
 
 <%= link_to 'New Order', new_order_path %>
 <br/>
-<%= link_to 'Back', pages_index_url %>
+<%= link_to 'Back', pages_browser_url %>
