--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -29,4 +29,4 @@
 <br>
 
 <%= link_to 'New User', new_user_path %>
-<%= link_to 'Back', pages_index_url %>
+<%= link_to 'Back', pages_browser_url %>
