--- a/app/views/product_params/show.html.erb
+++ b/app/views/product_params/show.html.erb
@@ -35,5 +35,10 @@
   <%= @product_param.value %>
 </p>
 
+<% if @is_product %>
 <%= link_to 'Edit', edit_product_product_param_path(@product, @product_param) %> |
 <%= link_to 'Back', product_product_params_path(@product) %>
+<% else %>
+<%= link_to 'Edit', edit_order_product_param_path(@order, @product_param) %> |
+<%= link_to 'Back', order_product_params_path(@order) %>
+<% end %>
