--- a/app/views/product_params/_form.html.erb
+++ b/app/views/product_params/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for([@product, @product_param]) do |f| %>
+<% if @is_product %>
+  <%= form_for([@product, @product_param]) do |f| %>
   <% if @product_param.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@product_param.errors.count, "error") %> prohibited this product_param from being saved:</h2>
@@ -42,4 +43,54 @@
   <div class="actions">
     <%= f.submit %>
   </div>
+  <% end %>
+<% else %>
+    <!--TODO REMOVE DUPLICATION-->
+
+    <%= form_for(order_product_param_path(@order, @product_param)) do |f| %>
+        <% if @product_param.errors.any? %>
+            <div id="error_explanation">
+                <h2><%= pluralize(@product_param.errors.count, "error") %> prohibited this product_param from being saved:</h2>
+
+                <ul>
+                    <% @product_param.errors.full_messages.each do |message| %>
+                        <li><%= message %></li>
+                    <% end %>
+                </ul>
+            </div>
+        <% end %>
+
+        <div class="field">
+            <%= f.label :key %><br>
+            <%= f.text_field :key %>
+        </div>
+        <div class="field">
+            <%= f.label :name %><br>
+            <%= f.text_field :name %>
+        </div>
+        <div class="field">
+            <%= f.label :paramtype %><br>
+            <%= f.text_field :paramtype %>
+        </div>
+        <div class="field">
+            <%= f.label :description %><br>
+            <%= f.text_field :description %>
+        </div>
+        <div class="field">
+            <%= f.label :constraint %><br>
+            <%= f.text_field :constraint %>
+        </div>
+        <div class="field">
+            <%= f.label :mandatory %><br>
+            <%= f.check_box :mandatory %>
+        </div>
+        <div class="field">
+            <%= f.label :value %><br>
+            <%= f.text_area :value %>
+        </div>
+        <div class="actions">
+            <%= f.submit %>
+        </div>
+     <% end %>
+
 <% end %>
