--- a/app/views/product_params/index.html.erb
+++ b/app/views/product_params/index.html.erb
@@ -1,5 +1,8 @@
+<% if @is_product %>
 <h1>Listing product.id=<%= @product.id %> / product_params</h1>
-
+<% else %>
+<h1>Listing order.id=<%= @order.id %> / product_params</h1>
+<% end %>
 <table>
   <thead>
     <tr>
@@ -24,9 +27,15 @@
         <td><%= product_param.constraint %></td>
         <td><%= product_param.mandatory %></td>
         <td><%= product_param.value %></td>
+        <% if @is_product %>
         <td><%= link_to 'Show', product_product_param_path(@product, product_param) %></td>
         <td><%= link_to 'Edit', edit_product_product_param_path(@product, product_param) %></td>
         <td><%= link_to 'Destroy', product_product_param_path(@product, product_param), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% else %>
+        <td><%= link_to 'Show', order_product_param_path(@order, product_param) %></td>
+        <td><%= link_to 'Edit', edit_order_product_param_path(@order, product_param) %></td>
+        <% end %>
+
       </tr>
     <% end %>
   </tbody>
@@ -34,4 +43,6 @@
 
 <br>
 
+<% if @is_product %>
 <%= link_to 'New Product param', new_product_product_param_path(@product) %>
+<% end %>
