Change Lark icon

--- a/app/assets/stylesheets/_siteheader.scss
+++ b/app/assets/stylesheets/_siteheader.scss
@@ -34,7 +34,7 @@
   align: left;
 }
 .lark_pictogram_image {
-  background: url("lark28x28.jpg") 28px 28px no-repeat;
+  background: url("lark28x28_trans.png") 28px 28px no-repeat;
   background-position: left top;
 }
 .pictogram_sh {
